[package]
name = "c_b_data"
version = "0.1.0"
authors = ["Primal System Studio <primalsystemstudio@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpython = "0.5"
crabler = "0.1.21"
async-std = "1.6.2"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls" ] }