[package]
name = "c_b_data"
version = "0.1.0"
authors = ["Primal System Studio <primalsystemstudio@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crabler = "0.1.22"
async-std = "1.6.2"
chrono = "0.4"
druid = { git = "https://github.com/linebender/druid.git" }

[dependencies.pyo3]
version = "0.13.1"
features = ["auto-initialize"]